# tgc-rust-contracts

./: Cargo.toml  README.md  build.sh  deploy.sh  deploy_main.sh  dfx.json
src/tgc_rust/: Cargo.toml  build.rs  lib.did  lib.rs  state_handler.rs
src/tgc_rust/declarations/: ledger.rs  mod.rs
tests/: test_controller.sh  test_functions.sh
